# ZebraPose

./: .gitignore  .gitmodules  LICENSE  README.md
Binary_Code_GT_Generator/: Generate_GT.md  generate_mesh_with_GT_color_for_BOP.py  generate_training_labels_for_BOP.py  generate_training_labels_for_BOP_v2.py
Binary_Code_GT_Generator/Generate_Mesh_with_GT_Color/: CMakeLists.txt  Generate_Mesh_with_GT_Color.cpp
Binary_Code_GT_Generator/Render_GT_Color_Mesh_to_GT_Img/: CMakeLists.txt
Binary_Code_GT_Generator/Render_GT_Color_Mesh_to_GT_Img/Render_Python_API/: RenderModule.cpp  setup.py
Binary_Code_GT_Generator/Render_GT_Color_Mesh_to_GT_Img/render_related_source/: camera.hpp  model.hpp  opengl_render.cpp  opengl_render.hpp  shader.hpp  shader_groundtruth.fs  shader_groundtruth.vs
Binary_Code_GT_Generator/Render_GT_Color_Mesh_to_GT_Img/render_related_source/glad/include/glad/: glad.h
Binary_Code_GT_Generator/Render_GT_Color_Mesh_to_GT_Img/render_related_source/glad/src/: glad.c
zebrapose/: GDR_Net_Augmentation.py  bop_dataset_pytorch.py  common_ops.py  config_parser.py  get_detection_results.py  get_mask_rcnn_results.py  metric.py  test.py  test_network_with_test_data.py  test_vivo.py  train.py  utils.py
zebrapose/binary_code_helper/: CNN_output_to_pose.py  class_id_encoder_decoder.py  generate_new_dict.py
zebrapose/config/config_ablation/: exp_lmo_ablation_16_4.txt  exp_lmo_ablation_256_2.txt  exp_lmo_ablation_2_16.txt  exp_lmo_ablation_4_8.txt
zebrapose/detection_results/icbin/: icbin_instances_predictions_bop.json
zebrapose/icp_module/: ICP_Cosypose.py  ICP_Render.py
zebrapose/model/: BinaryCodeNet.py  aspp.py  efficientnet.py  resnet.py
zebrapose/tools_for_BOP/: bop_io.py  common_dataset_info.py  merge_csv.py  write_to_cvs.py
(+51 files in other folders)
